fix: pagination spacing

--- a/src/assets/themes/main/components/pagination.scss
+++ b/src/assets/themes/main/components/pagination.scss
@@ -15,7 +15,7 @@
 }
 
 .v-pagination__body {
-  @apply flex;
+  @apply flex space-x-0.5;
 }
 
 .v-pagination__body__item {
